--- a/package.json
+++ b/package.json
@@ -6,5 +6,8 @@
     "devDependencies": {
         "typescript": "4.5.4"
     },
-    "packageManager": "yarn@3.1.1"
+    "packageManager": "yarn@3.1.1",
+    "resolutions": {
+        "typescript@4.5.4": "patch:typescript@npm:4.5.4#.yarn/patches/typescript-npm-4.5.4-2da9ac18bd"
+    }
 }
